# levels

./: Cargo.toml
src/: component.rs  error.rs  lib.rs  message_command.rs  message_create.rs  sqlx_lib.rs
src/commands/: levels.rs  mod.rs  rank.rs  xp.rs
src/slash_commands/: levels.rs  mod.rs  rank.rs
